test_regress/t/t_tagged_if.out
%Warning-SHORTREAL: t/t_tagged_if.v:78:5: Unsupported: shortreal being promoted to real (suggest use real instead)
   78 |     shortreal ShortRealVal;
      |     ^~~~~~~~~
                    ... For warning description see https://verilator.org/warn/SHORTREAL?v=latest
                    ... Use "/* verilator lint_off SHORTREAL */" and lint_on around source to disable this message.
%Warning-ASCRANGE: t/t_tagged_if.v:33:9: Ascending bit range vector: left < right of bit range: [0:31]
                                       : ... note: In instance 't'
   33 |     bit [0:31]    Word32LittleEndian;    
      |         ^
                   ... For warning description see https://verilator.org/warn/ASCRANGE?v=latest
                   ... Use "/* verilator lint_off ASCRANGE */" and lint_on around source to disable this message.
%Error: t/t_tagged_if.v:42:17: Unpacked data type 'int$[0:3]' in packed struct/union (IEEE 1800-2023 7.2.1)
                             : ... note: In instance 't'
   42 |     int         Arr[4];                  
      |                 ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_if.v:62:13: Unpacked data type 'chandle' in packed struct/union (IEEE 1800-2023 7.2.1)
                             : ... note: In instance 't'
   62 |     chandle Handle;
      |             ^~~~~~
%Error: t/t_tagged_if.v:68:15: Unpacked data type 'class{}TestClass' in packed struct/union (IEEE 1800-2023 7.2.1)
                             : ... note: In instance 't'
   68 |     TestClass Obj;
      |               ^~~
%Error: t/t_tagged_if.v:77:15: Unpacked data type 'real' in packed struct/union (IEEE 1800-2023 7.2.1)
                             : ... note: In instance 't'
   77 |     real      RealVal;
      |               ^~~~~~~
%Error: t/t_tagged_if.v:78:15: Unpacked data type 'real' in packed struct/union (IEEE 1800-2023 7.2.1)
                             : ... note: In instance 't'
   78 |     shortreal ShortRealVal;
      |               ^~~~~~~~~~~~
%Error: t/t_tagged_if.v:84:12: Unpacked data type 'string' in packed struct/union (IEEE 1800-2023 7.2.1)
                             : ... note: In instance 't'
   84 |     string StrVal;
      |            ^~~~~~
%Error: t/t_tagged_if.v:99:11: Unpacked data type 'event' in packed struct/union (IEEE 1800-2023 7.2.1)
                             : ... note: In instance 't'
   99 |     event EvtVal;
      |           ^~~~~~
%Warning-WIDTHEXPAND: t/t_tagged_if.v:170:14: Operator ASSIGN expects 32 bits on the Assign RHS, but Assign RHS's VARREF 'b' generates 8 bits.
                                            : ... note: In instance 't'
  170 |       result = b;
      |              ^
                      ... For warning description see https://verilator.org/warn/WIDTHEXPAND?v=latest
                      ... Use "/* verilator lint_off WIDTHEXPAND */" and lint_on around source to disable this message.
%Warning-WIDTHEXPAND: t/t_tagged_if.v:173:21: Operator NEQCASE expects 32 bits on the RHS, but RHS's CONST '8'ha5' generates 8 bits.
                                            : ... note: In instance 't'
  173 |     do if ((result) !== (8'hA5)) begin $write("%%Error: %s:%0d:  got=%0x exp=%0x (%s !== %s)\n", "t/t_tagged_if.v",173, (result), (8'hA5), "result", "8'hA5"); $stop; end while(0);;
      |                     ^~~
%Warning-WIDTHEXPAND: t/t_tagged_if.v:206:14: Operator ASSIGN expects 32 bits on the Assign RHS, but Assign RHS's VARREF 'a' generates 10 bits.
                                            : ... note: In instance 't'
  206 |       result = a;   
      |              ^
%Warning-WIDTHEXPAND: t/t_tagged_if.v:216:14: Operator ASSIGN expects 32 bits on the Assign RHS, but Assign RHS's VARREF 'a' generates 10 bits.
                                            : ... note: In instance 't'
  216 |       result = a;   
      |              ^
%Warning-WIDTHEXPAND: t/t_tagged_if.v:252:19: Operator ADD expects 32 bits on the LHS, but LHS's VARREF 'r1' generates 5 bits.
                                            : ... note: In instance 't'
  252 |       result = r1 + r2 + rd;
      |                   ^
%Warning-WIDTHEXPAND: t/t_tagged_if.v:252:19: Operator ADD expects 32 bits on the RHS, but RHS's VARREF 'r2' generates 5 bits.
                                            : ... note: In instance 't'
  252 |       result = r1 + r2 + rd;
      |                   ^
%Warning-WIDTHEXPAND: t/t_tagged_if.v:252:24: Operator ADD expects 32 bits on the RHS, but RHS's VARREF 'rd' generates 5 bits.
                                            : ... note: In instance 't'
  252 |       result = r1 + r2 + rd;
      |                        ^
%Warning-WIDTHEXPAND: t/t_tagged_if.v:265:16: Operator ASSIGN expects 32 bits on the Assign RHS, but Assign RHS's VARREF 'a' generates 10 bits.
                                            : ... note: In instance 't'
  265 |         result = a;
      |                ^
%Warning-WIDTHEXPAND: t/t_tagged_if.v:276:14: Operator ASSIGN expects 32 bits on the Assign RHS, but Assign RHS's VARREF 'a' generates 10 bits.
                                            : ... note: In instance 't'
  276 |       result = a;
      |              ^
%Error: Exiting due to
